// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge deve aplicar tamanho small 1`] = `
<View
  accessibilityLabel="Status: Pendente"
  accessibilityRole="text"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "#fff3d6",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "NunitoSans-SemiBold",
        },
        {
          "fontSize": 12,
        },
        {
          "color": "#d4820a",
        },
      ]
    }
  >
    Pendente
  </Text>
</View>
`;

exports[`Badge deve aplicar variante outlined 1`] = `
<View
  accessibilityLabel="Status: Pendente"
  accessibilityRole="text"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      },
      {
        "backgroundColor": "transparent",
        "borderColor": "#d4820a",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "NunitoSans-SemiBold",
        },
        {
          "fontSize": 14,
        },
        {
          "color": "#d4820a",
        },
      ]
    }
  >
    Pendente
  </Text>
</View>
`;
